--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   	-khtml-user-select: none; 
   	-webkit-user-select: none; 
   	-o-user-select: none; 
+    height:300px;
 }
 
 #overlay {
@@ -62,7 +63,7 @@
   height: 500px;
   z-index: 100;
   position: absolute;
-  top: 500px;
+  top: 300px;
   left: 0px;
 }
 
