--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@
   	-khtml-user-select: none; 
   	-webkit-user-select: none; 
   	-o-user-select: none; 
-    height:300px;
+    
 }
 
 #overlay {
-	z-index: 100;
+	z-index: -100;
 	position: absolute;
 	top: 100px;
   width: 100%;
@@ -49,7 +49,7 @@
   font-family: 'Open Sans';
 
   
-  text-shadow: 0 3px 4px rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0px 10px rgba(255, 255, 255, 1.0);
 }
 
 #rapper {
@@ -58,15 +58,26 @@
 }
 
 #bottomhalf {
-  background-color: white;
-  width: 100%;
-  height: 500px;
+  width: 80%;
+  height: 300px;
   z-index: 100;
   position: absolute;
   top: 300px;
-  left: 0px;
+  left: 10%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+#console {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+  color: white;
+  font-family: 'Open Sans';
 }
 
 body {
 	background-color: black;
+  margin: 0px;
+  overflow: hidden;
 }
